# GeneticAlgorithms

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  main.py  pyproject.toml  readData.py  tem0.py  utils.py
.github/: coverage.json  coverage.yml  json_analyzer.py
.github/workflows/: ci.yml  coverage.yml
src/: __main__.py  config.yaml  main.py  oop_main.py  population.json
src/api/: config.py  main.py  schemas.py
src/api/routers/: backend.py
src/api/services/: runner.py
src/classes/: ChildrenHandler.py  EvolutionRunner.py  ExperimentConfig.py  OutputGenerator.py  PathResolver.py  Plotter.py  PopulationHandler.py  Reproduction.py  Timer.py
src/config/: schemas.py
src/ga_core/: __init__.py
src/ga_core/analysis/: __init__.py  experiment_plotter.py  plot_context.py
src/ga_core/analysis/plots/: performance.py
src/ga_core/config/: __init__.py  experiment_config.py  input_config_scheme.py
src/ga_core/engine/: timer.py
src/ga_core/engine/memory_policy/: policy.py
src/ga_core/engine/population/: directory_manager.py  initialize.py  manager.py  service.py  types.py
src/ga_core/io/: __init__.py  experiment_reader.py  loader.py
src/ga_core/logging/: __init__.py  generation_log.py  runtime.py
src/ga_core/output/: __init__.py  csv_handler.py  csv_writer.py
src/ga_core/storage/: __init__.py  data_paths.py  directory_utils.py  experiment_storage.py  layout.py  naming_scheme.py  path_resolver.py  population_files.py
src/methods/: cli_output.py  data_loader.py  experiment_defining_tools.py  fitness_score.py  logging_library.py  memmap_operations.py  name_generator.py  reproduction_tools.py  selection_methods.py  tem0.py  utils.py
src/methods/legacy/: legacy_utils.py
src/methods/legacy /: legacy_utils.py
tests/: conftest.py  test_.module_IO_operators.py  test_children_handler.py  test_evolution_runner.py  test_experiment_config.py  test_fitness_calculation.py  test_generate_population.py  test_load_data.py  test_module_IO_operators.py  test_module_function_generate_population.py  test_module_io_operators.py  test_name_generation.py  test_output_generator.py  test_path_resolver.py  test_plotter_and_logger.py  test_population_handler.py  test_real_coverage_calculations.py  test_reproduction.py  test_selection_methods.py
tests/analysis/: test_performance_plot.py
tests/config/: test_experiment_config.py  test_input_config_scheme.py
tests/engine/population/: __init__.py  test_manager.py
tests/io/: test_experiment_reader.py  test_loader.py
tests/logging/: test_generation_log.py  test_runtime.py
tests/output/: test_csv_writer.py
tests/storage/: test_experiment_storage.py  test_paths.py  test_population_files.py
