[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-v"]

[project]
name = "genetic-algorithms-uni-project"
version = "0.1.0"
description = "Genetic algorithm experiments."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Inez Małecka", email = "maleckainez@gmail.com" },
]
keywords = ["genetic algorithm", "knapsack", "optimization"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "black>=25.9.0",
  "monkeypatch>=0.1rc3",
  "pre-commit >=4.4.0",
  "pylint>=4.0.3",
  "pylint-pytest>=1.1.8"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]