[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-v"]

[project]
name = "genetic-algorithms-uni-project"
version = "0.1.0"
description = "Genetic algorithm experiments."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Inez Małecka", email = "maleckainez@gmail.com" },
]
keywords = ["genetic algorithm", "knapsack", "optimization"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "PyYAML>=6.0",
  "pydantic>=2.4",
  "fastapi[standard]>=0.122.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "black>=25.9.0",
  "pre-commit>=4.4.0",
  "ruff>=0.6",
  "mypy>=1.18.2",
  "coverage>=7.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "F", "I", "D"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"tests/**/*.py" = [
  "D101",  # Missing docstring in public class
  "D102",  # Missing docstring in public method
  "D103",  # Missing docstring in public function
  "D104",  # Missing docstring in public package
  "D105",  # Missing docstring in magic method
  "D106",  # Missing docstring in public nested class
  "D107",  # Missing docstring in __init__
]


[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = ["tests/*", "build/"]

[project.urls]
Homepage = "https://github.com/maleckainez/GeneticAlgorithms"
Source = "https://github.com/maleckainez/GeneticAlgorithms"


[tool.coverage.run]
branch=true
source=["src"]

[tool.coverage.report]
show_missing = true
omit = [
  "tests/*",
  "*/__init__.py",
  "__main__.py"
]